--- a/css/styles.css
+++ b/css/styles.css
@@ -64,14 +64,16 @@ img {
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--third-text-color);
-  background: var(--fourth-text-color);
+  background-color: var(--fourth-text-color);
   cursor: pointer;
   border: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn {
   padding: 10px 32px;
   border-radius: 4px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -81,7 +83,7 @@ img {
 
 .btn:hover,
 .btn:focus {
-  background: #188ce8;
+  background-color: #188ce8;
 }
 
 .visually-hidden {
@@ -150,12 +152,26 @@ header .logo-link {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
 }
 
 .nav-link.nav-link-active,
 .nav-link:hover,
 .nav-link:focus {
   color: var(--fourth-text-color);
+}
+
+.nav-link-active::after {
+  content: "";
+  background-color: #2196f3;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -32px;
 }
 
 /* Контакты */
@@ -167,6 +183,7 @@ header .logo-link {
   color: var(--second-text-color);
   display: inline-flex;
   align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover,
@@ -186,6 +203,7 @@ header .logo-link {
 .contact-icon {
   fill: var(--second-text-color);
   margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover .contact-icon,
@@ -287,6 +305,27 @@ header .logo-link {
 
 .example-item {
   flex-basis: calc(100% / 3 - 30px);
+  position: relative;
+}
+
+.example-description {
+  min-height: 70px;
+  width: 370px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.example-title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--second-title-color);
 }
 
 /* Наша команда */
@@ -355,6 +394,7 @@ header .logo-link {
   justify-content: center;
   background-color: var(--primary-back-color);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -369,6 +409,7 @@ header .logo-link {
 
 .social-logo {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*Постоянные клиенты*/
@@ -397,11 +438,12 @@ header .logo-link {
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-link:hover,
 .client-link:focus {
-  border: 1px solid var(--fourth-text-color);
+  border-color: var(--fourth-text-color);
 }
 
 .client-link:hover .client-icon,
@@ -411,6 +453,7 @@ header .logo-link {
 
 .client-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Портфолио */
@@ -422,17 +465,20 @@ header .logo-link {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-  background: #f5f4fa;
+  background-color: #f5f4fa;
   cursor: pointer;
   padding: 6px 22px;
   border-radius: 4px;
   border: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
 .filter-btn:focus,
 .filter-btn.active {
-  background: var(--fourth-text-color);
+  background-color: var(--fourth-text-color);
   color: var(--third-text-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -450,6 +496,7 @@ header .logo-link {
 
 .portfolio-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
@@ -469,6 +516,35 @@ header .logo-link {
   margin-right: 30px;
   margin-bottom: 30px;
   flex-basis: calc(100% / 3 - 30px);
+}
+
+.img-holder {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-detail {
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--third-text-color);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: linear;
+  overflow: hidden;
+}
+
+.portfolio-item:hover .portfolio-detail {
+  transform: translateY(0);
 }
 
 .portfolio-description {
@@ -557,11 +633,6 @@ footer .social-link {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.social-link:hover,
-.social-link:focus {
-  background-color: #2196f3;
-}
-
 footer .social-logo {
   fill: var(--primary-back-color);
 }
@@ -581,9 +652,8 @@ footer .social-logo {
 }
 
 .backdrop.is-hidden .modal {
-   transform: translate(-50%, -50% ) scale(0.5);
+  transform: translate(-50%, -50%) scale(0.5);
 }
-
 
 .modal {
   width: 528px;
@@ -591,14 +661,14 @@ footer .social-logo {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50% ) scale(1);
+  transform: translate(-50%, -50%) scale(1);
   background-color: var(--primary-back-color);
   border-radius: 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  transition-property: transform ;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition-property: transform;
   transition-duration: 500ms;
   transition-timing-function: linear;
-
 }
 
 .modal-btn {
@@ -613,8 +683,6 @@ footer .social-logo {
   background-color: var(--primary-back-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  
-
 }
 
 .modal-icon {
@@ -622,7 +690,7 @@ footer .social-logo {
 }
 
 .is-hidden {
-  opacity:0;
+  opacity: 0;
   pointer-events: none;
   visibility: hidden;
 }
